chore: add utility PHP files to .gitignore
- Add clear_daily_data.php to .gitignore
- Add clear_daily_data_force.php to .gitignore
- Add update_gls_timeslots_correct.php to .gitignore
- Prevent future tracking of utility scripts

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@
 /public/storage
 /storage/*.key
 /storage/pail
+
+# Utility PHP files
+clear_daily_data.php
+clear_daily_data_force.php
+update_gls_timeslots_correct.php
 /vendor
 Homestead.json
 Homestead.yaml
